--- a/rosalind.cabal
+++ b/rosalind.cabal
@@ -22,3 +22,11 @@ executable counting_nucleotides
   build-depends:       base >=4.7 && <4.8
   -- hs-source-dirs:      
   default-language:    Haskell2010
+
+executable transcribe
+  main-is:             transcribe.hs
+  -- other-modules:       
+  -- other-extensions:    
+  build-depends:       base >=4.7 && <4.8
+  -- hs-source-dirs:      
+  default-language:    Haskell2010
