--- a/rosalind.cabal
+++ b/rosalind.cabal
@@ -25,8 +25,10 @@ executable counting_nucleotides
 
 executable transcribe
   main-is:             transcribe.hs
-  -- other-modules:       
-  -- other-extensions:    
   build-depends:       base >=4.7 && <4.8
-  -- hs-source-dirs:      
+  default-language:    Haskell2010
+
+executable complement
+  main-is:             complement.hs
+  build-depends:       base >=4.7 && <4.8
   default-language:    Haskell2010
