--- a/rosalind.cabal
+++ b/rosalind.cabal
@@ -15,6 +15,16 @@ build-type:          Simple
 -- extra-source-files:  
 cabal-version:       >=1.10
 
+executable gc_content
+  main-is:             gc_content.hs
+  -- other-modules:       
+  -- other-extensions:    
+  build-depends: base >=4.7 && <4.8
+               , split >= 0.2.2
+
+  -- hs-source-dirs:      
+  default-language:    Haskell2010
+
 executable counting_nucleotides
   main-is:             counting_nucleotides.hs
   -- other-modules:       
