--- a/rosalind.cabal
+++ b/rosalind.cabal
@@ -26,7 +26,7 @@ executable gc_content
   default-language:    Haskell2010
 
 executable counting_nucleotides
-  main-is:             counting_nucleotides.hs
+  main-is:             counting_nucleotides/counting_nucleotides.hs
   -- other-modules:       
   -- other-extensions:    
   build-depends:       base >=4.7 && <4.8
@@ -34,11 +34,16 @@ executable counting_nucleotides
   default-language:    Haskell2010
 
 executable transcribe
-  main-is:             transcribe.hs
+  main-is:             transcribe/transcribe.hs
   build-depends:       base >=4.7 && <4.8
   default-language:    Haskell2010
 
 executable complement
-  main-is:             complement.hs
+  main-is:             complement/complement.hs
+  build-depends:       base >=4.7 && <4.8
+  default-language:    Haskell2010
+
+library
+  exposed-modules:     Wabbits
   build-depends:       base >=4.7 && <4.8
   default-language:    Haskell2010
