--- a/rosalind.cabal
+++ b/rosalind.cabal
@@ -15,6 +15,11 @@ build-type:          Simple
 -- extra-source-files:  
 cabal-version:       >=1.10
 
+executable hamming
+  main-is:             hamming/Hamming.hs
+  build-depends: base >=4.7 && <4.8
+  default-language:    Haskell2010
+
 executable gc_content
   main-is:             gc_content/gc_content.hs
   -- other-modules:       
@@ -43,7 +48,7 @@ executable complement
   build-depends:       base >=4.7 && <4.8
   default-language:    Haskell2010
 
-library
-  exposed-modules:     Wabbits
+executable wabbits
+  main-is:             Wabbits.hs
   build-depends:       base >=4.7 && <4.8
   default-language:    Haskell2010
