--- a/rosalind.cabal
+++ b/rosalind.cabal
@@ -15,6 +15,11 @@ build-type:          Simple
 -- extra-source-files:  
 cabal-version:       >=1.10
 
+executable inheritance
+  main-is:             inheritance/Inheritance.hs
+  build-depends: base >=4.7 && <4.8
+  default-language:    Haskell2010
+
 executable hamming
   main-is:             hamming/Hamming.hs
   build-depends: base >=4.7 && <4.8
