--- a/rosalind.cabal
+++ b/rosalind.cabal
@@ -18,6 +18,7 @@ cabal-version:       >=1.10
 executable inheritance
   main-is:             inheritance/Inheritance.hs
   build-depends: base >=4.7 && <4.8
+               , containers
   default-language:    Haskell2010
 
 executable hamming
