--- a/rosalind.cabal
+++ b/rosalind.cabal
@@ -15,6 +15,12 @@ build-type:          Simple
 -- extra-source-files:  
 cabal-version:       >=1.10
 
+executable translate-rna
+  main-is:             translate_rna/TranslateRNA.hs
+  build-depends: base >=4.7 && <4.8
+               , splitros
+  default-language:    Haskell2010
+
 executable inheritance
   main-is:             inheritance/Inheritance.hs
   build-depends: base >=4.7 && <4.8
