--- a/rosalind.cabal
+++ b/rosalind.cabal
@@ -15,10 +15,15 @@ build-type:          Simple
 -- extra-source-files:  
 cabal-version:       >=1.10
 
+executable motifs
+    main-is: motifs/Motifs.hs
+    build-depends: base >=4.7 && <4.8
+    default-language: Haskell2010
+
 executable translate-rna
   main-is:             translate_rna/TranslateRNA.hs
   build-depends: base >=4.7 && <4.8
-               , splitros
+               , split
   default-language:    Haskell2010
 
 executable inheritance
