--- a/csharp/counting_nucleotides/CountingNucleotides.csproj
+++ b/csharp/counting_nucleotides/CountingNucleotides.csproj
@@ -34,7 +34,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="counting_nucleotides_cli.cs" />
+    <Compile Include="CountingNucleotidesCLI.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <ItemGroup>
