--- a/csharp/rosalind/rosalind.csproj
+++ b/csharp/rosalind/rosalind.csproj
@@ -36,6 +36,7 @@
     <Compile Include="CountingNucleotides.cs" />
     <Compile Include="Complement.cs" />
     <Compile Include="Wabbits.cs" />
+    <Compile Include="GCContent.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
 </Project>
