--- a/csharp/rosalind/rosalind.csproj
+++ b/csharp/rosalind/rosalind.csproj
@@ -38,6 +38,8 @@
     <Compile Include="Wabbits.cs" />
     <Compile Include="GCContent.cs" />
     <Compile Include="Hamming.cs" />
+    <Compile Include="Inheritance.cs" />
+    <Compile Include="Rational.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
 </Project>
