--- a/csharp/rosalind_test/rosalind_test.csproj
+++ b/csharp/rosalind_test/rosalind_test.csproj
@@ -35,6 +35,8 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Test.cs" />
+    <Compile Include="RationalTest.cs" />
+    <Compile Include="InheritanceTest.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <ItemGroup>
