--- a/csharp/rosalind/rosalind.csproj
+++ b/csharp/rosalind/rosalind.csproj
@@ -47,6 +47,7 @@
     <Compile Include="FASTA.cs" />
     <Compile Include="CircularBuffer.cs" />
     <Compile Include="ModularInt.cs" />
+    <Compile Include="OverlapGraph.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
 </Project>
